{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 81,
  "lineage": "3ebee2f0-dd8c-ed68-da48-3f4a31d01018",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "api",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2020-04-22T11:54:52.647-07:00",
            "description": "API Backend for http-multi-backend",
            "enable_cdn": false,
            "fingerprint": "WKHCM5kbOUI=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/healthChecks/http-multi-backend-hc"
            ],
            "id": "http-multi-backend-api",
            "load_balancing_scheme": "EXTERNAL",
            "name": "http-multi-backend-api",
            "port_name": "http",
            "project": "careful-lock-271320",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/backendServices/http-multi-backend-api",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.api",
            "google_compute_target_pool.template"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "5000"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-04-21T07:04:22.256-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "http-multi-backend-fw",
            "name": "http-multi-backend-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/networks/default",
            "priority": 1000,
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/firewalls/http-multi-backend-fw",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [
              "private-app"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "private-app"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "35.244.210.238",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2020-04-21T07:04:22.166-07:00",
            "id": "http-multi-backend-address",
            "name": "http-multi-backend-address",
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/addresses/http-multi-backend-address"
          }
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "http",
      "each": "list",
      "provider": "provider.google-beta",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "http-multi-backend-http-rule",
            "ip_address": "35.244.210.238",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "name": "http-multi-backend-http-rule",
            "port_range": "80-80",
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/forwardingRules/http-multi-backend-http-rule",
            "target": "https://www.googleapis.com/compute/beta/projects/careful-lock-271320/global/targetHttpProxies/http-multi-backend-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.api",
            "google_compute_target_pool.template",
            "google_compute_url_map.urlmap",
            "google_storage_bucket.static",
            "module.lb.google_compute_global_address.default",
            "module.lb.google_compute_target_http_proxy.http"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "https",
      "each": "list",
      "provider": "provider.google-beta"
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "http",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-22T11:55:04.682-07:00",
            "id": "http-multi-backend-http-proxy",
            "name": "http-multi-backend-http-proxy",
            "project": "careful-lock-271320",
            "proxy_id": 4518216910760652263,
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/targetHttpProxies/http-multi-backend-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/urlMaps/http-multi-backend-url-map"
          },
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.api",
            "google_compute_target_pool.template",
            "google_compute_url_map.urlmap",
            "google_storage_bucket.static"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "google_compute_target_https_proxy",
      "name": "default",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "urlmap",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-04-22T11:55:00.752-07:00",
            "default_service": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/backendBuckets/http-multi-backend-backend-bucket",
            "description": "URL map for http-multi-backend",
            "fingerprint": "pqmxArKiY4Q=",
            "host_rule": [
              {
                "description": "",
                "hosts": [
                  "*"
                ],
                "path_matcher": "all"
              }
            ],
            "id": "http-multi-backend-url-map",
            "map_id": 2175381447010758123,
            "name": "http-multi-backend-url-map",
            "path_matcher": [
              {
                "default_service": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/backendBuckets/http-multi-backend-backend-bucket",
                "description": "",
                "name": "all",
                "path_rule": [
                  {
                    "paths": [
                      "/api",
                      "/api/*"
                    ],
                    "service": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/backendServices/http-multi-backend-api"
                  }
                ]
              }
            ],
            "project": "careful-lock-271320",
            "self_link": "https://www.googleapis.com/compute/v1/projects/careful-lock-271320/global/urlMaps/http-multi-backend-url-map",
            "test": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_backend_bucket.static",
            "google_compute_backend_service.api",
            "google_compute_health_check.default",
            "google_compute_instance_group_manager.default",
            "google_compute_instance_template.api",
            "google_compute_target_pool.template",
            "google_storage_bucket.static"
          ]
        }
      ]
    }
  ]
}